--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -4,25 +4,35 @@ on:
   pull_request:
     branches:
       - dev
+
 jobs:
   docker-compose-test:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Export token 
+    env:
+        TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_AUTOTEST_TOKEN }}
+        export TELEGRAM_TOKEN
+    
     - name: Checkout repository
       uses: actions/checkout@v2
 
     - name: Build and Run Docker Compose
       run: |
-        docker-compose -f docker-compose.dev.yml up 
+        docker-compose -f docker-compose.dev.yml up -d 
 
     - name: Run pre-commit on Changed Files
       run: |
-        # Get list of changed files
-        FILES=$(git diff --name-only HEAD^ HEAD)
+        # Sleep for 10 seconds to let the container initialize
+        sleep 10
         
+        # Get container ID 
+        CONTAINER_ID=$(CONTAINER_ID=$(docker ps -q wachter-dev))
+        export CONTAINER_ID
+
         # Execute black inside container
-        docker exec wachter-dev bash -c "pipenv run pre-commit run black --all-files $FILES"
+        docker exec $CONTAINER_ID bash -c "pipenv run pre-commit run black --all-files"
         
         # Check if black made any changes
         if [ "$(git status --porcelain)" ]; then
@@ -32,7 +42,7 @@ jobs:
 
     - name: Check Docker logs for errors
       run: |
-        logs=$(docker logs YOUR_CONTAINER_NAME_OR_ID)
+        logs=$(docker logs $CONTAINER_ID)
         if echo $logs | grep -i "exited with code"; then
           echo "Found errors in Docker logs"
           exit 1
