--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Run pre-commit on Changed Files
       run: |
         # Sleep for 10 seconds to let the container initialize
-        sleep 30
+        sleep 10
         
         # Get container ID 
         CONTAINER_ID=$(docker ps -q --filter="name=wachter-dev")
@@ -30,13 +30,13 @@ jobs:
         export TELEGRAM_TOKEN=${{ secrets.TELEGRAM_AUTOTEST_TOKEN }}
 
         # Execute black inside container
-        docker exec $CONTAINER_ID bash -c "pipenv run pre-commit run black --all-files"
+        #docker exec $CONTAINER_ID bash -c "pipenv run pre-commit run black --all-files"
         
         # Check if black made any changes
-        if [ "$(git status --porcelain)" ]; then
-          echo "Changes were made by black. Please format your code before pushing."
-          exit 1
-        fi
+        #if [ "$(git status --porcelain)" ]; then
+        #  echo "Changes were made by black. Please format your code before pushing."
+        #  exit 1
+        #fi
 
     - name: Check Docker logs for errors
       run: |
