--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -17,28 +17,23 @@ jobs:
       run: |
         docker-compose -f docker-compose.dev.yml up -d 
 
-    - name: Run pre-commit on Changed Files
+    - name: Check Docker logs for errors
       run: |
         # Sleep for 10 seconds to let the container initialize
         sleep 10
-        
-
-        # Export TELEGRAM_TOKEN to be used in container or scripts
-        export TELEGRAM_TOKEN=${{ secrets.TELEGRAM_AUTOTEST_TOKEN }}
-
-        # Execute black inside container
-        #docker exec $CONTAINER_ID bash -c "pipenv run pre-commit run black --all-files"
-        
-        # Check if black made any changes
-        #if [ "$(git status --porcelain)" ]; then
-        #  echo "Changes were made by black. Please format your code before pushing."
-        #  exit 1
-        #fi
-
-    - name: Check Docker logs for errors
-      run: |
         logs=$(docker logs wachter-dev)
         if echo $logs | grep -i "exited with code"; then
           echo "Found errors in Docker logs"
+          exit 1
+        fi
+
+    - name: Run pre-commit on Changed Files
+      run: |
+        #Execute black inside container
+        docker exec wachter-dev bash -c "pipenv run pre-commit run black --all-files"
+        
+        #Check if black made any changes
+        if [ "$(git status --porcelain)" ]; then
+          echo "Changes were made by black. Please format your code before pushing."
           exit 1
         fi
