--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -32,11 +32,14 @@ jobs:
 
     - name: Run pre-commit on Changed Files
       run: |
-        #Execute black inside container
-        set -x
-        docker exec wachter-dev bash -c "pipenv run pre-commit run black --all-files"
+        # Get list of changed files
+        FILES=$(git diff --name-only HEAD^ HEAD)
         
-        #Check if black made any changes
+        # Execute black inside container
+        -set x
+        docker exec wachter-dev bash -c "pipenv run pre-commit run black --all-files $FILES"
+        
+        # Check if black made any changes
         if [ "$(git status --porcelain)" ]; then
           echo "Changes were made by black. Please format your code before pushing."
           exit 1
