--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -33,14 +33,14 @@ jobs:
     - name: Run pre-commit on Changed Files
       run: |
         # Get list of changed files
-        FILES=$(git diff --name-only HEAD^ HEAD)
+        FILES=$(git diff --name-only HEAD^ --)
         
         # Execute black inside container
-        -set x
-        docker exec wachter-dev bash -c "pipenv run pre-commit run black --all-files $FILES"
+        set -x
+        docker exec wachter-dev bash -c "pipenv run pre-commit run black --files $FILES"
         
         # Check if black made any changes
-        if [ "$(git status --porcelain)" ]; then
-          echo "Changes were made by black. Please format your code before pushing."
-          exit 1
-        fi
+        #if [ "$(git status --porcelain)" ]; then
+        #  echo "Changes were made by black. Please format your code before pushing."
+        #  exit 1
+        #fi
