--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -12,8 +12,13 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
+      with:
+        fetch-depth: 0  # fetches all commits
+
 
     - name: Build and Run Docker Compose
+      env:
+        TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_AUTOTEST_TOKEN }}
       run: |
         docker-compose -f docker-compose.dev.yml up -d 
 
@@ -29,10 +34,18 @@ jobs:
 
     - name: Run pre-commit on Changed Files
       run: |
-        #Execute black inside container
-        docker exec wachter-dev bash -c "pipenv run pre-commit run black --all-files"
+        # Get list of changed files
+          BASE_SHA=$(git rev-parse origin/${GITHUB_BASE_REF})
+          HEAD_SHA=$(git rev-parse origin/${GITHUB_HEAD_REF})
+          FILES=$(git diff --name-only $BASE_SHA $HEAD_SHA | tr '\n' ' ')
+
+          echo "Changed files: $FILES"
+
+        # Execute black inside container
+        set -x
+        docker exec wachter-dev bash -c "pipenv run pre-commit run black --files \"$FILES\""
         
-        #Check if black made any changes
+        # Check if black made any changes
         #if [ "$(git status --porcelain)" ]; then
         #  echo "Changes were made by black. Please format your code before pushing."
         #  exit 1
