--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -41,9 +41,14 @@ jobs:
 
           echo "Changed files: $FILES"
 
+          FILES_QUOTED=""
+          for file in $FILES; do
+            FILES_QUOTED="$FILES_QUOTED '$file'"
+          done
+
         # Execute black inside container
         set -x
-        docker exec wachter-dev bash -c 'pipenv run pre-commit run black --files \"$FILES\"'
+        docker exec wachter-dev bash -c 'pipenv run pre-commit run black --files $FILES'
         
         # Check if black made any changes
         #if [ "$(git status --porcelain)" ]; then
