--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,14 +1,7 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
-
--   repo: local
+-   repo: https://github.com/psf/black
+    rev: 22.10.0
     hooks:
     -   id: black
-        name: black
-        entry: bash -c 'pipenv run black $@' --
-        language: system
-        types: [python]
-        args: []
-        exclude: ^(.+)/migrations/.*\.py
-        
