--- a/.github/workflows/formatting_testing.yml
+++ b/.github/workflows/formatting_testing.yml
@@ -19,4 +19,5 @@ jobs:
       uses: actions/setup-python@v2
 
     - name: Run pre-commit
-      uses: pre-commit/action@v3.0.0
+      run: pre-commit run --show-diff-on-failure --color=always
+      shell: bash
