--- a/.github/workflows/formatting_testing.yml
+++ b/.github/workflows/formatting_testing.yml
@@ -18,6 +18,10 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
 
-    - name: Run pre-commit
-      run: pre-commit run --show-diff-on-failure --color=always
+    - name: pre-commit
+    - run: python -m pip install pre-commit
+      shell: bash
+    - run: python -m pip freeze --local
+      shell: bash
+    - run: pre-commit run --show-diff-on-failure --color=always 
       shell: bash
