--- a/.github/workflows/formatting_testing.yml
+++ b/.github/workflows/formatting_testing.yml
@@ -12,16 +12,18 @@ jobs:
       name: testing
 
     steps:
-    - name: Checkout repository
+    - name: checkout repository
       uses: actions/checkout@v2
 
-    - name: Set up Python
+    - name: set up Python
       uses: actions/setup-python@v2
 
-    - name: pre-commit
-    - run: python -m pip install pre-commit
+    - name: install pre-commit
+      run: python -m pip install pre-commit
       shell: bash
-    - run: python -m pip freeze --local
+    - name: pip freeze
+      run: python -m pip freeze --local
       shell: bash
+    - name: run pre-commit 
     - run: pre-commit run --show-diff-on-failure --color=always 
       shell: bash
