--- a/.github/workflows/formatting_testing.yml
+++ b/.github/workflows/formatting_testing.yml
@@ -21,9 +21,11 @@ jobs:
     - name: install pre-commit
       run: python -m pip install pre-commit
       shell: bash
+
     - name: pip freeze
       run: python -m pip freeze --local
       shell: bash
+
     - name: run pre-commit 
-    - run: pre-commit run --show-diff-on-failure --color=always 
+      run: pre-commit run --all-files --show-diff-on-failure
       shell: bash
