--- a/.github/workflows/formatting_testing.yml
+++ b/.github/workflows/formatting_testing.yml
@@ -28,12 +28,11 @@ jobs:
       
     - name: Get changed files
       id: changed-files
-      run: |
-        echo "::set-output name=files::$(git diff --name-only origin/${{ github.event.pull_request.base.ref }}...${{ github.event.pull_request.head.sha }})"
-
+      uses: tj-actions/changed-files@v44
+        
     - name: run pre-commit 
       run: |
-          FILES="${{ steps.changed-files.outputs.files }}"
+          FILES="${{ steps.changed-files.outputs.all_changed_files }}"
           if [ -n "$FILES" ]; then
             echo "$FILES" | xargs pre-commit run --files
           else
